VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/PRG.cpp.xilinx-performance-pragma-detector.err.log
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/PRG.cpp:1:
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/PRG.h:5:
In file included from /opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream.h:12:
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:127:9: error: use of undeclared identifier '__fpga_fifo_push'
        __fpga_fifo_push(&V, &din);
        ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/PRG.cpp:33:10: note: in instantiation of member function 'hls::stream<ap_uint<256>, 0>::write' requested here
                r_strm.write(r);
                       ^
